--- a/public/src/app/modules/pages/user-profile/user-profile.component.html
+++ b/public/src/app/modules/pages/user-profile/user-profile.component.html
@@ -5,51 +5,51 @@
 
 
     <div class="row">
-      <form>
+      <form id="formF">
         <table border="1">
           <tr>
             <td>Name:</td>
-            <td><input type="text"></td>
+            <td><input id="name-F" type="text" value="{{user.name}}"></td>
           </tr>
           <tr>
             <td>Surname:</td>
-            <td><input type="text"></td>
+            <td><input id="surname-F" type="text" value="{{user.surname}}"></td>
           </tr>
           <tr>
             <td>ID:</td>
-            <td><input type="text"></td>
+            <td><input id="id-F" type="text" value="{{user.id}}"></td>
           </tr>
           <tr>
             <td>Gender:</td>
-            <td><input type="text"></td>
+            <td><input id="gender-F" type="text" value="{{user.gender}}"></td>
           </tr>
           <tr>
             <td>E-mail:</td>
-            <td><input type="text"></td>
+            <td><input id="email-F" type="text" value="{{user.email}}"></td>
           </tr>
           <tr>
             <td>Address:</td>
-            <td><input type="text"></td>
+            <td><input id="address-F" type="text" value="{{user.address}}"></td>
           </tr>
           <tr>
             <td>City:</td>
-            <td><input type="text"></td>
+            <td><input id="city-F" type="text" value="{{user.city}}"></td>
           </tr>
           <tr>
             <td>State:</td>
-            <td><input type="text"></td>
+            <td><input id="state-F" type="text" value="{{user.state}}"></td>
           </tr>
           <tr>
             <td>Phone number:</td>
-            <td><input type="text"></td>
+            <td><input id="phone-F" type="text" value="{{user.phone}}"></td>
           </tr>
           <tr>
             <td>Points:</td>
-            <td><input type="text"></td>
+            <td><input id="points-F" type="text" value="{{user.points}}"></td>
           </tr>
           <tr>
             <td>Category:</td>
-            <td><input type="text"></td>
+            <td><input id="category-F" type="text" value="{{user.category}}"></td>
           </tr>
         </table>
       </form>
@@ -79,35 +79,35 @@
         <form >
           <div  class="form-group" >
              <label for="name">Name</label>
-             <input type="text"  name="name" class="form-control" id="nameE" aria-describedby="emailHelp" placeholder="Name">
+             <input type="text" [(ngModel)]="editedUser.name" name="name" class="form-control" id="nameE" aria-describedby="emailHelp" placeholder="Name">
           </div>
-          <input type="hidden"  name="id" class="form-control" id="id" placeholder="Email">
-          <input type="hidden"  name="userCode" class="form-control" id="userCode" placeholder="Email">
+          <input type="hidden"   name="id" class="form-control" id="id" placeholder="Email">
+          <input type="hidden" value="{{ editedUser.email }}" name="userCode" class="form-control" id="userCode" placeholder="Email">
           <div >
              <label for="surname">Surname</label>
-             <input type="surname"  name="surname" class="form-control" id="surnameE" placeholder="Surname">
+             <input type="surname" [(ngModel)]="editedUser.surname"  name="surname" class="form-control" id="surnameE" placeholder="Surname">
           </div>
           <div  class="form-group">
              <label for="address">Address</label>
-             <input type="text" name="address" class="form-control" id="addressE" placeholder="Address">
+             <input type="text" [(ngModel)]="editedUser.address"  name="address" class="form-control" id="addressE" placeholder="Address">
           </div>
           <div  class="form-group">
              <label for="city">City</label>
-             <input type="text"  name="city" class="form-control" id="cityE" name="city" placeholder="City">
+             <input type="text" [(ngModel)]="editedUser.city"  name="city" class="form-control" id="cityE" name="city" placeholder="City">
           </div>
           <div  class="form-group">
              <label for="state">State</label>
-             <input type="text"  name="state" class="form-control" id="stateE" placeholder="State">
+             <input type="text"  [(ngModel)]="editedUser.state"   name="state" class="form-control" id="stateE" placeholder="State">
           </div>
           <div  class="form-group">
             <label for="phone">Phone number</label>
-            <input type="text"  name="phone" class="form-control" id="phoneE" placeholder="Phone number">
+            <input type="text" [(ngModel)]="editedUser.phone" name="phone" class="form-control" id="phoneE" placeholder="Phone number">
          </div>
        </form>
       </div>
       <div  class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" (click)="saveButton()">Save changes</button>
       </div>
     </div>
   </div>
