--- a/public/src/app/modules/pages/user-profile/user-profile.component.html
+++ b/public/src/app/modules/pages/user-profile/user-profile.component.html
@@ -1,58 +1,58 @@
-<h1>
+<h1 class="text-center">
     WELCOME!
 </h1>
 <div  class="container" id="main-container">
 
 
-    <div class="row">
-      <form id="formF">
-        <table border="1">
-          <tr>
-            <td>Name:</td>
-            <td><input id="name-F" type="text" value="{{user.name}}"></td>
-          </tr>
-          <tr>
-            <td>Surname:</td>
-            <td><input id="surname-F" type="text" value="{{user.surname}}"></td>
-          </tr>
-          <tr>
-            <td>ID:</td>
+    <div style="border: 10px solid black;">
+
+      <table class="table table-info">
+        <tr>
+          <td class="text-center">Name:</td>
+          <td ><input id="name-F" type="text" value="{{user.name}}"></td>
+        </tr>
+        <tr>
+            <td class="text-center">Surname:</td>
+            <td ><input id="surname-F" type="text" value="{{user.surname}}"></td>
+        </tr>
+        <tr>
+            <td class="text-center">ID:</td>
             <td><input id="id-F" type="text" value="{{user.id}}"></td>
-          </tr>
-          <tr>
-            <td>Gender:</td>
+        </tr>
+        <tr>
+            <td class="text-center">Gender:</td>
             <td><input id="gender-F" type="text" value="{{user.gender}}"></td>
-          </tr>
-          <tr>
-            <td>E-mail:</td>
+        </tr>
+        <tr>
+            <td class="text-center">E-mail:</td>
             <td><input id="email-F" type="text" value="{{user.email}}"></td>
-          </tr>
-          <tr>
-            <td>Address:</td>
+        </tr>
+        <tr>
+            <td class="text-center">Address:</td>
             <td><input id="address-F" type="text" value="{{user.address}}"></td>
-          </tr>
-          <tr>
-            <td>City:</td>
+        </tr>
+        <tr>
+            <td class="text-center">City:</td>
             <td><input id="city-F" type="text" value="{{user.city}}"></td>
-          </tr>
-          <tr>
-            <td>State:</td>
+        </tr>
+        <tr>
+            <td class="text-center">State:</td>
             <td><input id="state-F" type="text" value="{{user.state}}"></td>
-          </tr>
-          <tr>
-            <td>Phone number:</td>
+        </tr>
+        <tr>
+            <td class="text-center">Phone number:</td>
             <td><input id="phone-F" type="text" value="{{user.phone}}"></td>
-          </tr>
-          <tr>
-            <td>Points:</td>
+        </tr>
+        <tr>
+            <td class="text-center">Points:</td>
             <td><input id="points-F" type="text" value="{{user.points}}"></td>
-          </tr>
-          <tr>
-            <td>Category:</td>
+        </tr>
+        <tr>
+            <td class="text-center">Category:</td>
             <td><input id="category-F" type="text" value="{{user.category}}"></td>
-          </tr>
-        </table>
-      </form>
+        </tr>
+      </table>
+
     </div>
     <div >
       <div >
@@ -63,7 +63,7 @@
 </div >
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editData">
+<button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#editData">
   Edit
 </button>
 
