--- a/public/src/app/modules/pages/user-profile/user-profile.component.css
+++ b/public/src/app/modules/pages/user-profile/user-profile.component.css
@@ -30,3 +30,13 @@ h1, h2, h3, h4, h5, h6 {
 a {
   color: #707070;
 }
+
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
