--- a/public/src/app/modules/pages/user-profile/user-profile.component.css
+++ b/public/src/app/modules/pages/user-profile/user-profile.component.css
@@ -2,12 +2,6 @@ body{
   margin-top:20px;
   background: #f5f5f5;
 }
-.card {
-  border: none;
-  -webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
-  margin-bottom: 30px;
-}
 .w-60 {
   width: 60px;
 }
@@ -39,4 +33,26 @@ a {
 }
 .text-right {
   text-align: right;
+}
+img{
+  height: 400px;
+  width: 400px;
+  border: 4px ridge blue;
+  }
+#right{
+  float: right;
+  }
+#center{
+    float: center;
+  }
+.myDiv {
+  border: 5px outset red;
+  background-color: lightblue;
+  text-align: center;
+}
+@media (max-width: 1500ox){
+  .myDiv{
+    width: 400px ;
+    max-width: 1500px;
+  }
 }
