--- a/public/src/app/modules/pages/user-profile/user-profile.component.html
+++ b/public/src/app/modules/pages/user-profile/user-profile.component.html
@@ -1,67 +1,68 @@
 <h1 class="text-center">
     WELCOME!
 </h1>
-<div  class="container" id="main-container">
+<div  style="border: 5px solid black" class="container" id="main-container">
 
-  <div  style="border: 10px solid black;">
-    <div class="container">
-      <img id="right" src="C:\Users\Tomo\Desktop\ISA-Projekat\ISA-projekat\public\src\assets\images\icons8-account-80.png">
+  <div  style=" height:15% ; width: 100%;">
+    <div style='float:left;' class="container">
+      <img style="margin-left:10%; margin-top:5%;" src="assets\images\icons8-account-80.png">
     </div >
-    <table class="table table-info">
-      <tr>
-        <td class="text-center">Name:</td>
-        <td ><input id="name-F" type="text" value="{{user.name}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">Surname:</td>
-        <td ><input id="surname-F" type="text" value="{{user.surname}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">ID:</td>
-        <td><input id="id-F" type="text" value="{{user.id}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">Gender:</td>
-        <td><input id="gender-F" type="text" value="{{user.gender}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">E-mail:</td>
-        <td><input id="email-F" type="text" value="{{user.email}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">Address:</td>
-        <td><input id="address-F" type="text" value="{{user.address}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">City:</td>
-        <td><input id="city-F" type="text" value="{{user.city}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">State:</td>
-        <td><input id="state-F" type="text" value="{{user.state}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">Phone number:</td>
-        <td><input id="phone-F" type="text" value="{{user.phone}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">Points:</td>
-        <td><input id="points-F" type="text" value="{{user.points}}"></td>
-      </tr>
-      <tr>
-        <td class="text-center">Category:</td>
-        <td><input id="category-F" type="text" value="{{user.category}}"></td>
-      </tr>
-    </table>
-
+    <div style='float:center;'>
+      <table  class="table table-info" style="margin-left:30%;float:top; font-size: 33px;">
+        <tr>
+          <td class="text-center">Name:</td>
+          <td ><input id="name-F" type="text" value="{{user.name}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">Surname:</td>
+          <td ><input id="surname-F" type="text" value="{{user.surname}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">ID:</td>
+          <td><input id="id-F" type="text" value="{{user.id}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">Gender:</td>
+          <td><input id="gender-F" type="text" value="{{user.gender}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">E-mail:</td>
+          <td><input id="email-F" type="text" value="{{user.email}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">Address:</td>
+          <td><input id="address-F" type="text" value="{{user.address}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">City:</td>
+          <td><input id="city-F" type="text" value="{{user.city}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">State:</td>
+          <td><input id="state-F" type="text" value="{{user.state}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">Phone number:</td>
+          <td><input id="phone-F" type="text" value="{{user.phone}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">Points:</td>
+          <td><input id="points-F" type="text" value="{{user.points}}"></td>
+        </tr>
+        <tr>
+          <td class="text-center">Category:</td>
+          <td><input id="category-F" type="text" value="{{user.category}}"></td>
+        </tr>
+      </table>
+    </div>
   </div>
-
-</div >
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#editData">
+  <!-- Button trigger modal -->
+<button id="right" type="button" class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#editData">
   Edit
 </button>
+</div >
+
+
 
 <!-- Modal -->
 <div class="modal fade" id="editData" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
