--- a/public/src/app/modules/pages/blood-banks-list/blood-banks-list.component.html
+++ b/public/src/app/modules/pages/blood-banks-list/blood-banks-list.component.html
@@ -1,26 +1,26 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
 
  
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Name </th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
   
   <ng-container matColumnDef="averageRating">
-    <th mat-header-cell *matHeaderCellDef> Average Rating </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by average rating"> Average Rating </th>
     <td mat-cell *matCellDef="let element"> {{element.averageRating}} </td>
   </ng-container>
 
  
   <ng-container matColumnDef="city">
-    <th mat-header-cell *matHeaderCellDef> City </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by city"> City </th>
     <td mat-cell *matCellDef="let element"> {{element.city}} </td>
   </ng-container>
 
  
   <ng-container matColumnDef="country">
-    <th mat-header-cell *matHeaderCellDef> Country </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by country"> Country </th>
     <td mat-cell *matCellDef="let element"> {{element.country}} </td>
   </ng-container>
 
