--- a/public/src/app/modules/pages/home/home.component.html
+++ b/public/src/app/modules/pages/home/home.component.html
@@ -1,3 +1,6 @@
 <button (click)="showBloodBanks()"> Blood Banks </button>
 
-<app-blood-banks-list></app-blood-banks-list>
+<div *ngIf="bloodbanks">
+    <app-blood-banks-list></app-blood-banks-list>
+    <button (click)="closeBloodBanks()"> Close </button>
+</div>
