Implemented update of Blood Bank info and address

--- a/public/src/app/modules/pages/admin-center-profile/admin-center-profile.component.html
+++ b/public/src/app/modules/pages/admin-center-profile/admin-center-profile.component.html
@@ -1,1 +1,7 @@
-<p>admin-center-profile works!</p>
+<input type="text" [(ngModel)]="center.name" placeholder="Name">
+<input type="text" [(ngModel)]="center.country" placeholder="Country">
+<input type="text" [(ngModel)]="center.city" placeholder="City">
+<input type="text" [(ngModel)]="center.street" placeholder="Street">
+<input type="text" [(ngModel)]="center.number" placeholder="Number">
+<input type="text" [(ngModel)]="center.description" placeholder="Description">
+<button (click)="submit()">Submit</button>
