--- a/public/src/app/modules/pages/admin-profile/admin-profile.component.html
+++ b/public/src/app/modules/pages/admin-profile/admin-profile.component.html
@@ -1,21 +1,21 @@
-
-<table mat-table [dataSource]="dataSource">
+<div>
+  <table mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="surname">
       <th mat-header-cell *matHeaderCellDef> Surname </th>
       <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="jmbg">
       <th mat-header-cell *matHeaderCellDef> JMBG </th>
       <td mat-cell *matCellDef="let element"> {{element.jmbg}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="address">
       <th mat-header-cell *matHeaderCellDef> Address </th>
       <td mat-cell *matCellDef="let element"> {{element.address}} </td>
@@ -35,7 +35,21 @@
       <th mat-header-cell *matHeaderCellDef> phoneNumber </th>
       <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
     </ng-container>
-  
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</div>
+<div>
+  <input type="text" [(ngModel)]="admin.name" placeholder="Name">
+  <input type="text" [(ngModel)]="admin.surname" placeholder="Surname">
+  <input type="text" [(ngModel)]="admin.email" placeholder="Email">
+  <input type="text" [(ngModel)]="admin.gender" placeholder="Gender">
+  <input type="text" [(ngModel)]="admin.jmbg" placeholder="Jmbg">
+  <input type="text" [(ngModel)]="admin.state" placeholder="State">
+  <input type="text" [(ngModel)]="admin.city" placeholder="City">
+  <input type="text" [(ngModel)]="admin.street" placeholder="Street">
+  <input type="text" [(ngModel)]="admin.streetNumber" placeholder="StreetNumber">
+  <input type="text" [(ngModel)]="admin.phoneNumber" placeholder="PhoneNumber">
+  <button (click)="submit()">Submit</button>
+</div>
