gotova promena podataka Admina centra

--- a/public/src/app/modules/pages/admin-profile/admin-profile.component.html
+++ b/public/src/app/modules/pages/admin-profile/admin-profile.component.html
@@ -46,10 +46,10 @@
   <input type="text" [(ngModel)]="admin.email" placeholder="Email">
   <input type="text" [(ngModel)]="admin.gender" placeholder="Gender">
   <input type="text" [(ngModel)]="admin.jmbg" placeholder="Jmbg">
-  <input type="text" [(ngModel)]="admin.state" placeholder="State">
+  <input type="text" [(ngModel)]="admin.country" placeholder="Country">
   <input type="text" [(ngModel)]="admin.city" placeholder="City">
   <input type="text" [(ngModel)]="admin.street" placeholder="Street">
-  <input type="text" [(ngModel)]="admin.streetNumber" placeholder="StreetNumber">
+  <input type="text" [(ngModel)]="admin.number" placeholder="StreetNumber">
   <input type="text" [(ngModel)]="admin.phoneNumber" placeholder="PhoneNumber">
   <button (click)="submit()">Submit</button>
 </div>
