fixed issues with register user

--- a/public/src/app/modules/pages/welcome/register/register.component.html
+++ b/public/src/app/modules/pages/welcome/register/register.component.html
@@ -55,13 +55,13 @@
   
     <mat-form-field appearance="fill">
       <mat-label>Country</mat-label>
-      <input [(ngModel)]="registeringUser.country" matInput>
+      <input [(ngModel)]="registeringUser.state" matInput>
     </mat-form-field><br>
 
    
       <mat-form-field appearance="fill">
         <mat-label>Telephone number</mat-label>
-        <input [(ngModel)]="registeringUser.telephoneNumber" placeholder="ex: 065123456" matInput>
+        <input [(ngModel)]="registeringUser.phoneNumber" placeholder="ex: 065123456" matInput>
       </mat-form-field>
     
     <section>
