--- a/public/src/app/modules/pages/user-profile/user-profile.component.html
+++ b/public/src/app/modules/pages/user-profile/user-profile.component.html
@@ -30,16 +30,16 @@
           <td><input id="email-F" type="text" value="{{user.email}}"></td>
         </tr>
         <tr>
-          <td class="text-center">Address:</td>
-          <td><input id="address-F" type="text" value="{{user.address}}"></td>
+          <td class="text-center">Street:</td>
+          <td><input id="address-F" type="text" value="{{user.address.street}} {{user.address.number}}"></td>
         </tr>
         <tr>
           <td class="text-center">City:</td>
-          <td><input id="city-F" type="text" value="{{user.city}}"></td>
+          <td><input id="city-F" type="text" value="{{user.address.city}}"></td>
         </tr>
         <tr>
           <td class="text-center">State:</td>
-          <td><input id="state-F" type="text" value="{{user.state}}"></td>
+          <td><input id="state-F" type="text" value="{{user.address.country}}"></td>
         </tr>
         <tr>
           <td class="text-center">Phone number:</td>
@@ -51,7 +51,7 @@
         </tr>
         <tr>
           <td class="text-center">Category:</td>
-          <td><input id="category-F" type="text" value="{{user.category}}"></td>
+          <td><input id="category-F" type="text" value="{{user.user_catagory}}"></td>
         </tr>
       </table>
     </div>
@@ -86,15 +86,15 @@
           </div>
           <div  class="form-group">
              <label for="address">Address</label>
-             <input type="text" [(ngModel)]="editedUser.address"  name="address" class="form-control" id="addressE" placeholder="Address">
+             <input type="text" [(ngModel)]="editedUser.address.street + ' ' +editedUser.address.number" name="address" class="form-control" id="addressE" placeholder="Address">
           </div>
           <div  class="form-group">
              <label for="city">City</label>
-             <input type="text" [(ngModel)]="editedUser.city"  name="city" class="form-control" id="cityE" name="city" placeholder="City">
+             <input type="text" [(ngModel)]="editedUser.address.city"  name="city" class="form-control" id="cityE" name="city" placeholder="City">
           </div>
           <div  class="form-group">
              <label for="state">State</label>
-             <input type="text"  [(ngModel)]="editedUser.state"   name="state" class="form-control" id="stateE" placeholder="State">
+             <input type="text"  [(ngModel)]="editedUser.address.country"   name="state" class="form-control" id="stateE" placeholder="State">
           </div>
           <div  class="form-group">
             <label for="phone">Phone number</label>
