--- a/public/src/app/modules/pages/welcome/register/register.component.html
+++ b/public/src/app/modules/pages/welcome/register/register.component.html
@@ -63,9 +63,9 @@
         </mat-form-field><br>
 
       <mat-label>Gender:  </mat-label><br>
-      <mat-radio-group aria-label="Select an option">
-        <mat-radio-button value="1">Male</mat-radio-button>
-        <mat-radio-button value="2">Female</mat-radio-button>
+      <mat-radio-group aria-label="Select an option" name="gender" formControlName="gender" [(ngModel)]="registeringUser.gender">
+        <mat-radio-button value="0"  name="male">Male</mat-radio-button>
+        <mat-radio-button value="1"  name="female">Female</mat-radio-button>
       </mat-radio-group>
 
       <section>
