--- a/public/src/app/modules/pages/blood-donor-form/blood-donor-form.component.css
+++ b/public/src/app/modules/pages/blood-donor-form/blood-donor-form.component.css
@@ -1,10 +1,7 @@
 .form {
-    justify-content: center;
-    align-items: center;
-    height: 1100px;
-    padding: 20px;
+    padding: 100px 0;
+    height: 440px;
     width: 1000px;
-    background-color: rgb(233, 229, 229);
     margin: auto;
 }
 
