--- a/public/src/app/modules/pages/home/home.component.html
+++ b/public/src/app/modules/pages/home/home.component.html
@@ -1,3 +1,16 @@
-<app-blood-banks-list></app-blood-banks-list>
+<div>
+    <nav class="navbar navbar-light bg-light static-top">
+        <div class="container">
+            <a class="navbar-brand" href="#!">Blood Donations Clinic</a>
+            <a class="btn btn-primary" style="align-self: right;" href="userProfile">User profile</a>
+        </div>
+    </nav>
+</div>
 
-<button mat-raised-button (click)="bloodDonorForm()">Blood Donor Form</button>
+<div style="margin-left: 10px; margin-right: 10px;">
+<app-blood-banks-list></app-blood-banks-list>
+</div>
+
+<div style="margin-top: 20px; margin-left: 10px;">
+    <button mat-raised-button (click)="bloodDonorForm()">Blood Donor Form</button>
+</div>
