--- a/public/src/app/modules/pages/blood-banks-list/blood-banks-list.component.html
+++ b/public/src/app/modules/pages/blood-banks-list/blood-banks-list.component.html
@@ -1,23 +1,19 @@
 <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
 
-
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Name </th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
-
 
   <ng-container matColumnDef="averagePoints">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by average rating"> Average Points </th>
     <td mat-cell *matCellDef="let element"> {{element.averagePoints}} </td>
   </ng-container>
 
-
   <ng-container matColumnDef="city">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by city"> City </th>
     <td mat-cell *matCellDef="let element"> {{element.city}} </td>
   </ng-container>
-
 
   <ng-container matColumnDef="country">
     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by country"> Country </th>
@@ -32,15 +28,14 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<div>
+<div style="margin-top: 20px;">
   <input type="text" [(ngModel)]="searchCenter.name" placeholder="Name">
   <!-- <button (click)="searchByName()">Search Name</button> -->
-</div>
-<div>
+
   <input type="text" [(ngModel)]="searchCenter.city" placeholder="City">
   <button (click)="search()">Search</button>
 </div>
-<div>
+<div  style="margin-top: 5px;">
   <select [(ngModel)]="filterCountry" (change)="filterByCountry()">
     <option >Reset Country</option>
     <option *ngFor="let c of countries">{{c}}</option>
