--- a/public/src/app/modules/pages/welcome/welcome.component.html
+++ b/public/src/app/modules/pages/welcome/welcome.component.html
@@ -1,1 +1,7 @@
-<app-register></app-register>
+<nav class="navbar navbar-light bg-light static-top">
+    <div class="container">
+        <a class="navbar-brand" href="#!">Blood Donations Clinic</a>
+        <a class="btn btn-primary" href="register">Sign Up</a>
+        <a class="btn btn-primary" href="login">Sign in</a>
+    </div>
+</nav>
