--- a/public/src/app/modules/pages/registered-users-list/registered-users-list.component.html
+++ b/public/src/app/modules/pages/registered-users-list/registered-users-list.component.html
@@ -1,9 +1,9 @@
 <mat-form-field class="example-form-field">
-    <mat-label>Clearable input</mat-label>
+    <mat-label>Name</mat-label>
     <input matInput type="text" [(ngModel)]="search.name">
   </mat-form-field>
   <mat-form-field class="example-form-field">
-    <mat-label>Clearable input</mat-label>
+    <mat-label>Surname</mat-label>
     <input matInput type="text" [(ngModel)]="search.surname">
   </mat-form-field>
   <button matSuffix mat-icon-button aria-label="Clear" (click)="searchUser()">
