--- a/public/src/app/modules/pages/welcome/welcome.component.html
+++ b/public/src/app/modules/pages/welcome/welcome.component.html
@@ -4,4 +4,8 @@
         <a class="btn btn-primary" href="register">Sign Up</a>
         <a class="btn btn-primary" href="login">Sign in</a>
     </div>
+    
 </nav>
+<div style="margin-left: 10px; margin-right: 10px;">
+    <app-blood-banks-list></app-blood-banks-list>
+</div>
