added admin home page buttons

--- a/public/src/app/modules/pages/admin-dashboard/admin-dashboard.component.html
+++ b/public/src/app/modules/pages/admin-dashboard/admin-dashboard.component.html
@@ -3,8 +3,18 @@
         <a class="navbar-brand" href="#!">Blood Donations Clinic</a>
         <a class="btn btn-primary" href="register-center-admin">Create Center</a>
         <a class="btn btn-primary" href="register-center">Create Admin</a>
+        <a class="btn btn-primary" href="blood-donors-list">Blood donors list</a>
+        <a class="btn btn-primary" href="work-schedule">Work schedule</a>
+        <a class="btn btn-primary" href="userProfile">User profile</a>
+        <a class="btn btn-primary" href="new-appointment">New Appointment</a>
+        
+        
     </div>
 </nav>
+
+<div style="margin-left: 10px; margin-right: 10px;">
+    <app-registered-users-list></app-registered-users-list>
+</div>
 
 <!-- <button (click)="createCenter()">Create Center</button>
 <button (click)="createAdmin()">Create Admin</button> -->
