--- a/public/src/app/modules/pages/registered-users-list/registered-users-list.component.html
+++ b/public/src/app/modules/pages/registered-users-list/registered-users-list.component.html
@@ -1,4 +1,5 @@
-<mat-form-field class="example-form-field">
+<div style="margin-top: 20px;">
+  <mat-form-field class="example-form-field">
     <mat-label>Name</mat-label>
     <input matInput type="text" [(ngModel)]="search.name">
   </mat-form-field>
@@ -9,8 +10,8 @@
   <button matSuffix mat-icon-button aria-label="Clear" (click)="searchUser()">
     <mat-icon>search</mat-icon>
   </button>
+  </div>
 <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
-
  
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Name </th>
