--- a/public/src/app/modules/admin-center/pages/registered-users-list/registered-users-list.component.html
+++ b/public/src/app/modules/admin-center/pages/registered-users-list/registered-users-list.component.html
@@ -15,7 +15,7 @@
  
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> <a [routerLink]="['/admin-appointment', element.id]">{{element.name}} </a></td>
     </ng-container>
   
     
