frontend work i promenjen userController da ima id

--- a/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
+++ b/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
@@ -1,1 +1,21 @@
-<p>admin-appointment works!</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class='panel-footer'>
+    <a class='btn btn-default' (click)='onBack()' style='width: 80px; background-color: purple; color: whitesmoke; margin-left: 10px;'>
+        Back
+    </a>
+</div>
