--- a/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
+++ b/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
@@ -1,12 +1,12 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
+    <ng-container matColumnDef="question">
+      <th mat-header-cell *matHeaderCellDef> Question </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
   
-    <ng-container matColumnDef="surname">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
+    <ng-container matColumnDef="answer">
+      <th mat-header-cell *matHeaderCellDef> Answer </th>
       <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
     </ng-container>
 
