--- a/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
+++ b/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
@@ -1,5 +1,23 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="surname">
+      <th mat-header-cell *matHeaderCellDef> Surname </th>
+      <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  
+
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  
     <ng-container matColumnDef="question">
       <th mat-header-cell *matHeaderCellDef> Question </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -10,16 +28,18 @@
       <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
   </table>
-  
 
 
 
 
-
-
+<div class='panel-footer'>
+    <a class='btn btn-default' (click)='startAppointment()' style='width: 175px; background-color: purple; color: whitesmoke; margin-left: 10px; margin-top: 10px;'>
+        Start Appointment
+    </a>
+</div>
 
 
 <div class='panel-footer'>
