--- a/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
+++ b/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
@@ -16,21 +16,82 @@
   
 
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+
+
+
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="margin-top: 30px;">
   
     <ng-container matColumnDef="question">
       <th mat-header-cell *matHeaderCellDef> Question </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> 
+
+        <br>
+        Da li imate manje od 50 kilograma?
+        <br>
+        Da li imate ikakve promene na kozi?
+        <br>
+        Da li se trenutno osecate zdravim, sposobnim i odmornim da date krv ili komponente krvi?
+        <br>
+        Da li Vam je pritisak suvise visok ili nizak?
+        <br>
+        Da li trenutno imate menstruaciju?
+        <br>
+        Da li je proslo 7 dana od vadjenja zuba ili manjih stomatoloskih intervencija?
+        <br>
+        Da li je proslo najmanje 7 dana od terapije antibioticima?
+        <br>
+        Da li je proslo najmanje 6 meseci od probadanja tela i koze(pirsing)?
+        <br>
+        Da li je proslo najmanje 6 meseci od pojedinih hirurskih intervencija i transfuzije krvi?
+        <br>
+        Da li je proslo najmanje 6 meseci od tetoviranja?
+        <br>
+
+      </td>
     </ng-container>
   
     <ng-container matColumnDef="answer">
       <th mat-header-cell *matHeaderCellDef> Answer </th>
-      <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
+      <td mat-cell *matCellDef="let element"> 
+
+        <br>
+        {{element.weight}} 
+        <br>
+        {{element.skinIssues}}
+        <br>
+        {{element.healthy}}
+        <br>
+        {{element.bloodPressure}}
+        <br>
+        {{element.femalePeriod}} 
+        <br>
+        {{element.underMedicationLast7Days}} 
+        <br>
+        {{element.toothOutLast7Days}} 
+        <br>
+        {{element.piercingLast6Months}} 
+        <br>
+        {{element.operationOrTransfusionLast6Months}} 
+        <br>
+        {{element.tattooLast6Months}} 
+        <br>
+
+      </td>
+      
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
   </table>
+
+
+
+
+
+
+
 
 
 
