Added complaints and answering complaints

--- a/public/src/app/modules/admin/change-password.html
+++ b/public/src/app/modules/admin/change-password.html
@@ -11,5 +11,5 @@
     </mat-form-field>
 </div>
 <div mat-dialog-actions>
-    <button mat-button cdkFocusInitial>Change</button>
+    <button mat-button cdkFocusInitial [mat-dialog-close]="data">Change</button>
 </div>
