--- a/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
+++ b/public/src/app/modules/admin-center/pages/admin-appointment/admin-appointment.component.html
@@ -1,4 +1,7 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div> <h1 style="text-align: center; margin-top: 30px; margin-bottom: 30px;"> Appointment page </h1></div>
+
+
+<table style="margin-left: 20px; width: 95%;" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -16,7 +19,7 @@
   
 
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="margin-top: 30px;">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style="margin-top: 30px; margin-left: 20px; margin-bottom: 10px; width: 95%;">
   
     <ng-container matColumnDef="question">
       <th mat-header-cell *matHeaderCellDef> Question </th>
@@ -83,41 +86,33 @@
 
 
 
-
-
-
-
-
-
-
-
 <div class='panel-footer'>
-    <a class='btn btn-default' (click)='startAppointment()' style='width: 175px; background-color: purple; color: whitesmoke; margin-left: 10px; margin-top: 10px;'>
+    <a class='btn btn-default' (click)='startAppointment()' style='width: 175px; background-color: purple; color: whitesmoke; margin-left: 20px; margin-top: 10px;'>
         Start Appointment
     </a>
 </div>
 
 
 <div class='panel-footer'>
-    <a class='btn btn-default' (click)='onBack()' style='width: 80px; background-color: purple; color: whitesmoke; margin-left: 10px; margin-top: 10px;'>
+    <a class='btn btn-default' (click)='onBack()' style='width: 80px; background-color: purple; color: whitesmoke; margin-left: 20px; margin-top: 10px;'>
         Back
     </a>
 </div>
 
 <div class='panel-footer'>
-    <a class='btn btn-default' (click)='didntShowUp()' style='width: 150px; background-color: purple; color: whitesmoke; margin-left: 10px; margin-top: 10px;'>
+    <a class='btn btn-default' (click)='didntShowUp()' style='width: 150px; background-color: purple; color: whitesmoke; margin-left: 20px; margin-top: 10px;'>
         Didn't show up
     </a>
 </div>
 
 <div class='panel-footer'>
-    <a class='btn btn-default' (click)='doesntMeetRequirements()' style='width: 240px; background-color: purple; color: whitesmoke; margin-left: 10px; margin-top: 10px;'>
+    <a class='btn btn-default' (click)='doesntMeetRequirements()' style='width: 240px; background-color: purple; color: whitesmoke; margin-left: 20px; margin-top: 10px;'>
         Doesn't meet requirements
     </a>
 </div>
 
 
-<table mat-table [dataSource]="dataSource2" class="mat-elevation-z8" style="margin-top: 30px;">
+<table mat-table [dataSource]="dataSource2" class="mat-elevation-z8" style="margin-top: 30px; margin-left: 20px; width: 95%;">
   
   <ng-container matColumnDef="datum">
     <th mat-header-cell *matHeaderCellDef> Datum </th>
