--- a/public/src/app/modules/pages/home/home.component.html
+++ b/public/src/app/modules/pages/home/home.component.html
@@ -14,3 +14,7 @@
 <div style="margin-top: 20px; margin-left: 10px;">
     <button mat-raised-button (click)="bloodDonorForm()">Blood Donor Form</button>
 </div>
+
+<div style="margin-top: 30px; margin-left: 10px;">
+    <button mat-raised-button (click)="logout()">Logout</button>
+</div>
