Small changes in UI

--- a/public/src/app/modules/admin/pages/registered-users-list/registered-users-list.component.html
+++ b/public/src/app/modules/admin/pages/registered-users-list/registered-users-list.component.html
@@ -1,3 +1,4 @@
+<section>
 <mat-form-field class="example-form-field">
     <mat-label>Clearable input</mat-label>
     <input matInput type="text" [(ngModel)]="search.name">
@@ -9,7 +10,7 @@
   <button matSuffix mat-icon-button aria-label="Clear" (click)="searchUser()">
     <mat-icon>search</mat-icon>
   </button>
-<table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="table">
 
  
     <ng-container matColumnDef="name">
@@ -38,3 +39,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+</section>
