--- a/public/src/app/modules/admin/pages/register-center-admin/register-center-admin.component.html
+++ b/public/src/app/modules/admin/pages/register-center-admin/register-center-admin.component.html
@@ -1,19 +1,93 @@
-<input type="email" [(ngModel)]="centerAdmin.email" placeholder="Email">
-<input type="password" [(ngModel)]="centerAdmin.password" placeholder="Password">
-<input type="text" [(ngModel)]="centerAdmin.name" placeholder="Name">
-<input type="text" [(ngModel)]="centerAdmin.surname" placeholder="Surname">
-<input type="text" [(ngModel)]="centerAdmin.country" placeholder="Country">
-<input type="text" [(ngModel)]="centerAdmin.city" placeholder="City">
-<input type="text" [(ngModel)]="centerAdmin.street" placeholder="Street">
-<input type="text" [(ngModel)]="centerAdmin.number" placeholder="Number">
-<input type="number" [(ngModel)]="centerAdmin.jmbg" placeholder="JMBG">
-<select name="Gender" [(ngModel)]="centerAdmin.gender">
-    <option>
-        Male
-    </option>
-    <option>
-        Female
-    </option>
-</select>
-<input type="text" [(ngModel)]="centerAdmin.phoneNumber" placeholder="Phone Number">
-<button (click)="submit()">Submit</button>
+<section>
+    <mat-card color="primary">
+        <mat-card-title><strong>Create New Admin Center</strong></mat-card-title>
+    
+        <mat-card-content>
+    <form [formGroup]="registerForm" (ngSubmit)="register()">
+
+    <mat-form-field appearance="fill">
+        <input type="email" matInput placeholder="Email" formControlName="email">
+        <mat-error
+            *ngIf="this.registerForm.get('email')?.touched && this.registerForm.get('email')?.hasError('required')">
+            Email is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="password" matInput placeholder="Password" formControlName="password">
+        <mat-error
+            *ngIf="this.registerForm.get('password')?.touched && this.registerForm.get('password')?.hasError('required')">
+            Password is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Name" formControlName="name">
+        <mat-error
+            *ngIf="this.registerForm.get('name')?.touched && this.registerForm.get('name')?.hasError('required')">
+            Name is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Surname" formControlName="surname">
+        <mat-error
+            *ngIf="this.registerForm.get('surname')?.touched && this.registerForm.get('surname')?.hasError('required')">
+            Surname is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="number" matInput placeholder="JMBG" formControlName="jmbg">
+        <mat-error
+            *ngIf="this.registerForm.get('jmbg')?.touched && this.registerForm.get('jmbg')?.hasError('required')">
+            Jmbg is required</mat-error>
+    </mat-form-field>
+    
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Phone Number" formControlName="phoneNumber">
+        <mat-error
+            *ngIf="this.registerForm.get('phoneNumber')?.touched && this.registerForm.get('phoneNumber')?.hasError('required')">
+            Phone Nubmer is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Country" formControlName="country">
+        <mat-error
+            *ngIf="this.registerForm.get('country')?.touched && this.registerForm.get('country')?.hasError('required')">
+            Country is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="City" formControlName="city">
+        <mat-error
+            *ngIf="this.registerForm.get('city')?.touched && this.registerForm.get('city')?.hasError('required')">
+            City is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Street" formControlName="street">
+        <mat-error
+            *ngIf="this.registerForm.get('street')?.touched && this.registerForm.get('street')?.hasError('required')">
+            Street is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Street Number" formControlName="number">
+        <mat-error
+            *ngIf="this.registerForm.get('number')?.touched && this.registerForm.get('number')?.hasError('required')">
+            Number is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Gender</mat-label>
+        <mat-select formControlName="gender">        
+            <mat-option *ngFor="let gender1 of genders" [value]="gender1">
+                {{gender1}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <div class="button">
+        <button type="submit" mat-button [disabled]="!registerForm.valid">Register</button>
+    </div>  
+</form>
+</mat-card-content>
+</mat-card>
+</section>
