--- a/public/src/app/modules/admin/pages/register-center/register-center.component.html
+++ b/public/src/app/modules/admin/pages/register-center/register-center.component.html
@@ -1,19 +1,65 @@
-<input type="text" [(ngModel)]="center.name" placeholder="Name">
-<input type="text" [(ngModel)]="center.country" placeholder="Country">
-<input type="text" [(ngModel)]="center.city" placeholder="City">
-<input type="text" [(ngModel)]="center.street" placeholder="Street">
-<input type="text" [(ngModel)]="center.number" placeholder="Number">
-<input type="text" [(ngModel)]="center.description" placeholder="Description">
-<table>
-    <tr *ngFor="let centerAdmin of pom">
-        <td>{{centerAdmin.name}} {{centerAdmin.surname}}</td>
-        <td><button (click)="remove(centerAdmin)">Remove</button></td>
-    </tr>
-</table>
-<table>
-    <tr *ngFor="let centerAdmin of centerAdmins">
-        <td>{{centerAdmin.name}} {{centerAdmin.surname}}</td>
-        <td><button (click)="add(centerAdmin)">Add</button></td>
-    </tr>
-</table>
-<button (click)="submit()">Submit</button>
+<section>
+    <mat-card color="primary">
+        <mat-card-title><strong>Create New Center</strong></mat-card-title>
+    
+        <mat-card-content>
+    <form [formGroup]="registerForm" (ngSubmit)="register()">
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Name" formControlName="name">
+        <mat-error
+            *ngIf="this.registerForm.get('name')?.touched && this.registerForm.get('name')?.hasError('required')">
+            Name is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Country" formControlName="country">
+        <mat-error
+            *ngIf="this.registerForm.get('country')?.touched && this.registerForm.get('country')?.hasError('required')">
+            Country is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="City" formControlName="city">
+        <mat-error
+            *ngIf="this.registerForm.get('city')?.touched && this.registerForm.get('city')?.hasError('required')">
+            City is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Street" formControlName="street">
+        <mat-error
+            *ngIf="this.registerForm.get('street')?.touched && this.registerForm.get('street')?.hasError('required')">
+            Street is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Street Number" formControlName="number">
+        <mat-error
+            *ngIf="this.registerForm.get('number')?.touched && this.registerForm.get('number')?.hasError('required')">
+            Number is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <input type="text" matInput placeholder="Description" formControlName="description">
+        <mat-error
+            *ngIf="this.registerForm.get('description')?.touched && this.registerForm.get('description')?.hasError('required')">
+            Description is required</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+        <mat-label>Center Admins</mat-label>
+        <mat-select formControlName="admins" multiple="true">        
+            <mat-option *ngFor="let admin of centerAdmins" [value]="admin.id">
+                {{admin.name}} {{admin.surname}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <div class="button">
+        <button type="submit" mat-button [disabled]="!registerForm.valid">Register</button>
+    </div>  
+</form>
+</mat-card-content>
+</mat-card>
+</section>
